gcc/testsuite/gdc.test/runnable/imports/a15030.d
module a;

import imports.std15030algo;
