gcc/testsuite/gdc.test/fail_compilation/imports/ice21060c/package.d
import imports.ice21060d;
